2003-09-13  Michael Banck <mbanck@gmx.net>

	* src/chemtool.cpp: New file.
	* src/Makefile.am (libopenbabel_la_SOURCES): Added chemtool.cpp.
	* src/Makefile.in: Regenerated.
	* src/data.cpp (TextToType): Added CHEMTOOL typestring.
	* src/data.h (io_type): Added CHEMTOOL.
	* src/extable.txt: Added Chemtool writing support.
	* src/fileformat.cpp (OBFileFormat::WriteMolecule): Added
	WriteCHT function call for CHEMTOOL io_type.
	* src/fileformat.h (OBFileFormat): Added WriteCHT() method.

2003-07-02  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* src/data.cpp (GetAtomicNum): Fix mistake in calls to strcasecmp,
	as pointed out by Chris Morley.

	* src/math/Makefile.am: Make sure math/matrix3x3.h and
	math/vector3.h are installed with a "make install" as reported by
	Jean. Fixes PR#761644.

	* Makefile.in, src/math/Makefile.in: Regenerate using automake.

2003-06-26  Michael Banck <mbanck@gmx.net>

	* NEWS: New file.

2003-06-23  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* src/main.cpp: Move man documentation to end of file (right
	after usage() code) for better "readability". Also make sure that
	we quit attempting to read molecules from a file when we find no
	atoms. Fixes some problems seen when roundtripping.
	
2003-06-23  Vincent Favre-Nicolin  <vincefn@users.sourceforge.net>

	* doc/Doxyfile-man, src/main.cpp, Doxyfile: Added the man page in
	doxygen format in main.cpp, for automatic generation of the man
	page from the source code, using 'Doxygen Doxyfile-man' in the
	doc/ directory. Normal Doxygen run now skips src/main.cpp

2003-06-23  Geoffrey Hutchison  <hutchisn@chem.northwestern.edu>

	* doc/babel.1: Update with current command-line options and file
	formats.

	* doc/FAQ.html, doc/Migration.html: Use HTML versions from the
	website rather than text versions.

	* doc/Makefile.in, doc/Makefile.am: Update accordingly.

	* src/cml.cpp(CleanUp): New method to clean up global vector