@@ -13,15 +13,6 @@ GNU General Public License for more details.
 ***********************************************************************/
 
 /* ---- C includes ---- */
-// fails under Borland and probably other WIN32
-// simply avoids compile errors;
-#ifndef __BORLANDC__ 
-#include <netdb.h>
-#include <unistd.h>
-#include <sys/param.h>
-#else
-char* getlogin();
-#endif
 #include <math.h>
 #include <time.h>
 #include <stdlib.h>
@@ -133,7 +124,6 @@ void OutputHeader(ostream &ofs, OBMol &mol, string prefix)
  time_t akttime;                              /* Systemtime                        */
  char timestr[TIME_STR_SIZE + 1] = "";        /* Timestring                        */
  size_t time_res;                             /* Result of strftime                */
- char *log_name;                              /* Pointer to buffer with login name */
 
  /* ---- Get the system-time ---- */
  akttime = time((time_t *) NULL);
@@ -147,17 +137,6 @@ void OutputHeader(ostream &ofs, OBMol &mol, string prefix)
  ofs << "//Povray V3.1 code generated by Open Babel" << endl;
  ofs << "//Author: Steffen Reith <streit@streit.cc>" << endl;
  ofs << "//Version: " <<  version << endl;
-
- /* ---- Get the login name ---- */
- log_name = getlogin();
- 
- /* ---- Check for a valid login name and hostname ---- */
- if (log_name != (char *) NULL) {
-
-   /* ---- Write login/hostname ---- */
-   ofs << "//Converted for: " << log_name << endl;
-
- }
 
  /* ---- Include timestamp in header ---- */
  ofs << "//Date: " << timestr << endl << endl;
